--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
     "angular-sanitize": "1.4.8",
     "angular-touch": "1.4.8",
     "angular-ui-select": "~0.13.2",
+    "angular-tooltips": "~1.2.2",
     "bootstrap-datepicker": "~1.4.0",
     "bootstrap-sass-official": "^3.2.0",
     "font-awesome": "~4.4.0",
