--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,6 @@
     "angular-aria": "1.4.8",
     "angular-bootstrap": "~0.13",
     "angular-cookies": "1.4.8",
-    "angular-dragdrop": "https://github.com/rodrigocuriel/angular-dragdrop.git",
     "angular-filter": "~0.5.8",
     "angular-messages": "1.4.8",
     "angular-qr": "~0.2.0",
@@ -35,7 +34,8 @@
     "moment": "^2.16.0",
     "angular-timezone-selector": "^1.6.0",
     "checklist-model": "^0.9.0",
-    "angulartics-google-analytics": "^0.2.1"
+    "angulartics-google-analytics": "^0.2.1",
+    "angular-native-dragdrop": "^1.3.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
