--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "autoprefixer-core": "^5.2.0",
     "csswring": "^3.0.5",
     "grunt": "^0.4.5",
+    "grunt-cli": "^0.1.13",
     "grunt-concurrent": "^1.0.0",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-concat": "^0.5.0",
